--- a/style.css
+++ b/style.css
@@ -174,3 +174,8 @@ header{
         max-width: 150rem;
         margin: auto;
      }
+
+     .task-done{
+         text-decoration: line-through;
+         color: gray;
+     }
